# nixtools

./: .editorconfig  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  pytest.ini
.config/: README.md  lefthook.toml
nix/: devshells.nix
nix/outputs/: devshells.nix
nixtools/: __init__.py  gpg.py  gpg_cli.py
nixtools/nixtools/: main.py
nixtools/textfsm/: gpg-card-header.txt  gpg-card-key.txt  gpg-info.txt
stubs/: pytest.pyi  textfsm.pyi
tests/: test_gpg.py
