[project]
name = "NixTools"
version = "0.1.0"
description = "Helper scripts for managing my NixOS Systems"
authors = [
    {name = "Michael Buckley", email = "michaelcbuckley@proton.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bandit.assert_used]
skips = ["*test*.py", "tests/*"]

[dependency-groups]
dev = []

